test/domains/johnk/capacityTooBig.good
capacityTooBig.chpl:3: error: halt reached - Requested capacity (1610612741100) exceeds maximum size
