test/domains/johnk/capacityTooBig.chpl
var D : domain(string);

D.requestCapacity(1610612741100);
